# qt-music-player

./: AudioInfo.cpp  AudioInfo.h  AudioInfoBox.qml  AudioSearchModel.cpp  AudioSearchModel.h  CMakeLists.txt  ImageButton.qml  Main.qml  PlayListPanel.qml  PlayerController.cpp  PlayerController.h  README.md  SearchField.qml  SearchPanel.qml  TextButton.qml  main.cpp
